--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -66,7 +66,7 @@
     </nav>
 </div> -->
 
-<div class="uk-position-relative uk-visible-toggle uk-light" style="width: 80%; margin: 1% auto;" tabindex="-1"
+<div class="uk-position-relative uk-visible-toggle uk-light" style="width: 80%; margin: 10% auto 5% auto;" tabindex="-1"
     uk-slideshow="min-height: 300; max-height: 400; animation: push" id="endstickness">
 
     <ul class="uk-slideshow-items" style="border-radius: 10px;">
@@ -93,7 +93,7 @@
 
 
 
-
+<section id="navbarhider"></section>
 
 
 <div class="uk-section uk-section-default" style="width: 80%; margin: 0 auto;">
