--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -10,7 +10,11 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.10/dist/css/uikit.min.css" />
 	<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 </head>
-
+<style>
+	*{
+		trasform: 0.5s;	
+	}
+</style>
 <body oncontextmenu='return false' class='snippet-body'>
 	<div class="container" style="margin-top: 5%">
 		<h1 style="font-size:30px; text-align: center; ">Добро пожаловать в</h1>
@@ -52,7 +56,7 @@
 						</div>
 					</div>
 					
-					<button class="uk-button uk-button-secondary uk-width-1-2 uk-margin" type="submit" name="btnform1">Зарегестрироваться</button>
+					<button class="uk-button uk-button-secondary uk-width-1-2 uk-margin" id="signinbtn" type="submit" name="btnform1">Зарегестрироваться</button>
 					{% csrf_token %}
 				</form>
 			<form method="POST" action="." id="signin-form" class="uk-text-center">
@@ -82,6 +86,21 @@
 <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'>
 </script>
 <script>
+	
+	$('.pswdChecker').on('input', function(event) {
+		pswd1 = $('#password1');
+		pswd2 = $('#password2');
+		if ((pswd1.val() != pswd2.val()) && (pswd1.length < 8 || pswd2.length < 8)) {
+			pswd1.css('border-color', 'red')
+			pswd2.css('border-color', 'red')
+			$('#signinbtn').attr('disabled', 'disabled')
+		} else {
+			pswd1.css('border-color', 'green')
+			pswd2.css('border-color', 'green')
+			$('#signinbtn').attr('disabled', false)
+		}
+	})
+
 	$(document).ready(function () {
 		$("#signup").click(function () {
 			$("#signin-form").css("display", "none");
