--- a/partner/Part/templates/signin.html
+++ b/partner/Part/templates/signin.html
@@ -96,15 +96,10 @@
                         <br>
                         <div class="uk-width-1-1 uk-flex uk-flex-between">
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2">
-                                <label> Почта </label>
-                                <br>
-                                <input class="uk-input" type="text" placeholder="BeFreela@mail.ru">
+                                {{form.email.label}}: {{form.email}}
                             </div>
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2">
-                                <label> Название организации </label>
-                                <br>
-                                <input class="uk-input" type="password" placeholder="Введите ваш парлоль">
-                            </div>
+                                {{form.password1.label}}: {{form.password1}}</div>
                         </div>
                     </div>
 
@@ -137,7 +132,7 @@
                                 </select>
                             </div>
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-3-5">
-                                <label> Название организации </label>
+                                <label> Название организации ???? </label>
                                 <br>
                                 <input class="uk-input" type="text" placeholder="Введите название организзации">
                             </div>
@@ -147,19 +142,13 @@
 
                         <div class="uk-width-1-1 uk-flex uk-flex-between">
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-4">
-                                <label> ОГРН </label>
-                                <br>
-                                <input class="uk-input" type="text" placeholder="Введите свой ОГРН">
+                                {{form.ogrn.label}}: {{form.ogrn}}
                             </div>
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-4">
-                                <label> ИНН </label>
-                                <br>
-                                <input class="uk-input" type="text" placeholder="Введите свой ИНН">
+                                {{form.inn.label}}: {{form.inn}}
                             </div>
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-4">
-                                <label> КПП </label>
-                                <br>
-                                <input class="uk-input" type="text" placeholder="Введите свой КПП">
+                                {{form.kpp.label}}: {{form.kpp}}
                             </div>
                         </div>
 
@@ -167,10 +156,7 @@
 
                         <div class="uk-width-1-1 uk-flex uk-flex-between">
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1">
-                                <label> Адрес регистрации с почтовым индексом </label>
-                                <br>
-                                <input class="uk-input" type="text"
-                                    placeholder="162390, Россия, Вологодская область, город Великий Устюг, дом Деда Мороза">
+                                {{form.street.label}}: {{form.street}}
                             </div>
                         </div>
 
@@ -178,15 +164,10 @@
 
                         <div class="uk-width-1-1 uk-flex uk-flex-between">
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-3-5">
-                                <label> Физический адрес </label>
-                                <br>
-                                <input class="uk-input" type="text"
-                                    placeholder="Мурманская обл., Мончегорск, Лапландский заповедник, пер.Зеленый, д.8">
+                                {{form.fiz_adress.label}}: {{form.fiz_adress}}
                             </div>
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-3">
-                                <label> Индекс </label>
-                                <br>
-                                <input class="uk-input" type="text" placeholder="184506">
+                                {{form.index.label}}: {{form.index}}
                             </div>
                         </div>
 
@@ -199,19 +180,15 @@
                         <br>
                         <div class="uk-width-1-1 uk-flex uk-flex-between">
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-4">
-                                <label> Расчетный счет </label>
-                                <br>
-                                <input class="uk-input" type="text">
+                               {{form.payment_account.label}}: {{form.payment_account}}
                             </div>
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-4">
-                                <label> БИК </label>
-                                <br>
-                                <input class="uk-input" type="text">
+                                {{form.bik.label}}: {{form.bik}}
+
                             </div>
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-4">
-                                <label> Корреспондентский счет </label>
-                                <br>
-                                <input class="uk-input" type="text">
+                                {{form.korr_check.label}}: {{form.korr_check}}
+
                             </div>
                         </div>
                     </div>
@@ -234,7 +211,7 @@
                         </div>
                     </div>
 
-                    {% csrf_token %}
+
                     <br>
                     <br>
                     <div style="overflow:auto;" id="next-previous">
@@ -243,6 +220,7 @@
                                 onclick="nextPrev(-1)">
                                 Назад
                             </button>
+                            {% csrf_token %}
                             <button class="uk-button uk-button-default" type="button" id="nextBtn"
                                 onclick="nextPrev(1)">
                                 Далее
