--- a/partner/Part/templates/index.html
+++ b/partner/Part/templates/index.html
@@ -28,7 +28,7 @@
                     src="https://fashionelite.com/wp-content/uploads/2016/09/1331144712_IMG_paris1.jpg">
                 <br>
                 <br>
-                <p>{user.email}</p>
+                <p>{{user.email}}</p>
             </div>
             <br>
             <ul class="uk-nav-default uk-text-center" uk-nav>
