--- a/partner/Part/templates/index.html
+++ b/partner/Part/templates/index.html
@@ -10,27 +10,28 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-
 </head>
 <style>
-    .row{
-        --bs-gutter-x: none!important;
+    .row {
+        --bs-gutter-x: none !important;
     }
 </style>
-<body style="height: 100%; width: 100%;">
 
-    <div class="uk-position-left uk-width-1" style="align-items: stretch">
-        <div class="uk-card uk-card-default uk-card-body uk-width-1-5@s" style="height: 100%;">
-            <div class="sidebar-header uk-text-center" style="padding: 0px">
-                <h3 style="color: black">BeFreela Partners</h3>
-                <img class="uk-border-circle" width="80" height="80"
+<body style="height: 100%; width: 100%;">
+    <div style="position: fixed; top: 3%; left: 3%; z-index: 1000;">
+        <a class="uk-botton uk-button-link uk-flex uk-flex-center uk-flex-middle" href="#side-menu" uk-icon="menu"
+            uk-toggle style="width: 30px; height: 30px; background-color:white"></a>
+    </div>
+    <div id="side-menu" uk-offcanvas="mode: push; overlay: true;">
+        <div class="uk-offcanvas-bar uk-flex uk-flex-column">
+            <div class="uk-flex-row uk-width-1 uk-text-center uk-margin-medium-bottom"
+                style="border-bottom: 1px solid gray">
+                <h3>BeFreela Partners</h3>
+                <br>
+                <img class="uk-border-circle uk-margin-medium-bottom" width="80" height="80"
                     src="https://fashionelite.com/wp-content/uploads/2016/09/1331144712_IMG_paris1.jpg">
-                <br>
-                <br>
                 <p>{{user.email}}</p>
             </div>
-            <br>
             <ul class="uk-nav-default uk-text-center" uk-nav>
                 <li class="Btn uk-text-center">
                     <button class="uk-button uk-button-text uk-width-1"
@@ -39,42 +40,35 @@
                 </li>
                 <li class="Btn uk-text-center uk-margin-small-top">
                     <button class="uk-button uk-button-text uk-width-1"
-                    style="margin: 0 auto; padding-bottom: 10px; font-size: 20px; text-transform: lowercase; font-size: 20px; border-bottom: 1px solid gray">Информация
+                        style="margin: 0 auto; padding-bottom: 10px; font-size: 20px; text-transform: lowercase; font-size: 20px;">Информация
                         о продавцe</button>
                 </li>
-
+                <!-- <li class="uk-nav-divider"></li> -->
                 <li class="Btn uk-text-center uk-margin-small-top">
                     <button class="uk-button uk-button-text uk-width-1"
                         style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px;">Магазин</button>
                 </li>
-
                 <li class="Btn uk-text-center uk-margin-small-top">
                     <button class="uk-button uk-button-text uk-width-1"
                         style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px;">кабинет</button>
                 </li>
-
                 <li class="Btn uk-text-center uk-margin-small-top">
                     <button class="uk-button uk-button-text uk-width-1"
                         style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px;">Товары</button>
                 </li>
             </ul>
         </div>
-
-        <div id="content" class="uk-width-4-5@s uk-position-right">
-            <div id="MainWindowContainer" w3-inslude-html="template.html">
-            </div>
+    </div>
+    <div id="content" class="uk-width-1 uk-position-right">
+        <div id="MainWindowContainer" w3-inslude-html="template.html">
         </div>
-
+    </div>
     </div>
 </body>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-    integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous">
-</script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
 
 <script type="text/javascript">
     $(function () {
@@ -90,9 +84,7 @@
             $('#MainWindowContainer').html(xhr.response)
         }
         xhr.send()
-
     });
-
     $('.Btn').on('click', {}, function (inBody) {
         var xhr = new XMLHttpRequest()
         var index = $(this).index() + 1
