--- a/partner/Part/templates/partnerTemplates/template3.html
+++ b/partner/Part/templates/partnerTemplates/template3.html
@@ -1,120 +1,150 @@
-
-<div class="card" id="product_creator">
-    <div class="card-body">
-        <!-- Grid row -->
-        <div class="row">
-            <!-- Grid column -->
-            <div class="uk-width-1 uk-text-center">
-                <h1 class="">Мои товары</h1>
-                <a class="uk-button uk-button-primary uk-border-rounded Btnn" role="button" style="margin: auto">Создать товар</a>
-            </div>
-            <!-- Grid column -->
-        </div>
-        <!-- Grid row -->
-        <!--Table-->
-        <table class="uk-table uk-table-divider">
-            <!--Table head-->
-            <thead>
-                <tr>
-                    <th class="uk-text-left">Название товара</th>
-                    <th class="uk-text-left">Бренд</th>
-                    <th class="uk-text-left">Цена</th>
-                    <th class="uk-text-left">Опубликовано</th>
-                    <th class="uk-text-left">Удалить</th>
-
-
-                </tr>
-            </thead>
-            <!--Table head-->
-            <!--Table body-->
-            <form method="GET" id="goodsList" action="/becomeCreator/">
-
-
-                {% csrf_token %}
-                <tbody uk-sortable>
-
-                    {% for product in products %}
-
-                        <tr>
-                            <td class="uk-text-truncate">{{ product.product_name }}</td>
-                            <td>text</td>
-                            <td>{{ product.cost }}</td>
-                            <td>text</td>
-                            <td class="uk-text-left">
-                                <button name="delete" form="goodsList" value="{{product.id}}" href="" type="submit"
-                                    class="uk-button uk-button-danger uk-border-rounded uk-text-large"> X </button>
-                            </td>
-                        </tr>
-
-                    {% endfor %}
-                </tbody>
-            </form>
-        </table>
-
-
-
-
-        <!--Table body-->
-
-        </table>
-    </div>
-</div>
-
 <style>
-    .hm-gradient {
-        background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+
+    *{
+        transition: 0.2s;
     }
 
-    .darken-grey-text {
-        color: #2E2E2E;
+    #main-img {
+        height: 30em;
+        background-color: #cccccc;
+        background-image: url(https://html5css.ru/css/img_lights.jpg);
+        background-repeat: none;
+        background-position: center;
+        background-size: cover;
+        display: flex;
+        align-items: flex-end;
+        justify-content: left;
     }
 
-    .input-group.md-form.form-sm.form-2 input {
-        border: 1px solid #bdbdbd;
-        border-top-left-radius: 0.25rem;
-        border-bottom-left-radius: 0.25rem;
+    form {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
     }
 
-    .input-group.md-form.form-sm.form-2 input.purple-border {
-        border: 1px solid #9e9e9e;
+    .category {
+        border: 2px solid;
+        border-radius: 10px;
+        margin: 5px 2px;
+        padding: 1%;
     }
 
-    .input-group.md-form.form-sm.form-2 input[type=text]:focus:not([readonly]).purple-border {
-        border: 1px solid #ba68c8;
-        box-shadow: none;
+    .chosen{
+        background-color: blue;
+        color: white;
+        border: 2px solid black;
     }
 
-    .form-2 .input-group-addon {
-        border: 1px solid #ba68c8;
-    }
-
-    .danger-text {
-        color: #ff3547;
-    }
-
-    .success-text {
-        color: #00C851;
-    }
-
-    .table-bordered.red-border,
-    .table-bordered.red-border th,
-    .table-bordered.red-border td {
-        border: 1px solid #ff3547 !important;
-    }
-
-    .table.table-bordered th {
-        text-align: center;
-    }
+    
 </style>
 
+<body>
+
+
+    <form>
+        <div id="main-img">
+            <div class="uk-width-4-5" style="margin: 0 auto; padding: 2% 0px">
+                <div class="uk-card-header" style="padding: 0px;">
+                    <div class="uk-grid-small uk-flex-middle" uk-grid>
+                        <div class="uk-flex uk-flex-column " uk-width-auto">
+                            <img class="" width="200" height="40"
+                                src="https://images.unsplash.com/photo-1453728013993-6d66e9c9123a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8cGhvdG9ncmFwaGVyfGVufDB8fDB8fA%3D%3D&w=1000&q=80">
+                            <div uk-form-custom>
+                                <input type="file">
+                                <button class="uk-button uk-button-secondary uk-width-1" type="button"
+                                    tabindex="-1">Изменить фото</button>
+                            </div>
+                        </div>
+                        <div class="uk-width-2-5 uk-flex uk-flex-column uk-text-left">
+                            <label style="color: white; font-size: 1.5em;">Введите имя магазина</label>
+                            <input class="uk-input uk-margin-remove-bottom uk-width-1" style="font-size: 2em;"
+                                type="text" placeholder="Input">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div uk-form-custom>
+                <input type="file">
+                <button class="uk-button uk-button-secondary uk-width-1" type="button" tabindex="-1">Изменить
+                    фото</button>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="uk-section uk-width-4-5" style="margin: 0 auto;">
+            <div class="uk-width-2-3@m uk-flex uk-flex-between" style="margin: 0 auto;">
+                <div style="display: inline-block; margin: 0 10px" class="uk-flex uk-flex-left uk-width-1-2@m">
+                    <label> Категории </label>
+                    <br>
+                    <br>
+                    <div class="uk-flex uk-flex-wrap uk-flex-wrap-around">
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория1</a>
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория2</a>
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория3</a>
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория4</a>
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория5</a>
+                        <a class="uk-button uk-text-bold uk-button-link category" onclick="selectCategory(this)">категория6</a>
+                    </div>
+                    <input type="text" name="chosenCategoties" id="chosenCategoties" style="display: none;" readonly>
+                </div>
+                <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2@m">
+                    <label> Статус магазина </label>
+                    <br>
+                    <br>
+                    <select class="uk-select">
+                        <option value="Работает">Работает</option>
+                        <option value="Заморожен">Заморожен</option>
+                        <option value="Не работает">Не работает</option>
+                        <option value="Физлицо">Физлицо</option>
+                    </select>
+                </div>
+            </div>
+
+            <br>
+            <br>
+
+            <div class="uk-width-2-3@m uk-flex uk-flex-between" style="margin: 0 auto;">
+                <div style="display: inline-block; margin: 0 10px" class="uk-width-1">
+                    <label> Описание магазина </label>
+                    <br>
+                    <br>
+                    <textarea class="uk-textarea" rows="5" placeholder="Textarea"></textarea>
+                </div>
+            </div>
+
+            <br>
+            <br>
+
+            <div class="uk-width-2-3@m uk-flex uk-flex-between" style="margin: 0 auto;">
+                <div style="display: inline-block; margin: 0 10px" class="uk-width-1 uk-text-right">
+                    <button class="uk-button uk-button-primary" type="submit">Сохранить</button>
+                </div>
+            </div>
+        </div>
+    </form>
+
+</body>
 <script>
-    $('.Btnn').on('click', {}, function (inBody) {
-        var xhr = new XMLHttpRequest()
-        localStorage.page=6
-        xhr.open('GET', `becomeCreatorTemplates/6/`)
-        xhr.onload = function () {
-            $('#MainWindowContainer').html(xhr.response)
-        }
-        xhr.send()
-    });
+
+    function selectCategory(el){
+        let classes = el.className.split(' ')
+        classes[classes.length - 1] == 'category' ? addElement(el) : removeElement(el);
+    }
+
+    function addElement(el){
+        el.classList.add("chosen");
+        document.getElementById("chosenCategoties").value += `${el.innerHTML} `;
+        
+    }
+
+    function removeElement(el){
+        let input = document.getElementById("chosenCategoties")
+        el.classList.remove("chosen");
+        input.value = input.value.replace(`${el.innerHTML} `, '')
+    }
+
 </script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
