--- a/partner/Part/templates/partnerTemplates/template5.html
+++ b/partner/Part/templates/partnerTemplates/template5.html
@@ -1,30 +1,120 @@
-<form method="POST">
 
-<div class="row">
-  <div class="col-md-1">
-    <div class="d-flex flex-column align-items-center text-center p-3 py-5"></div>
-  </div>
-  <div id="main_change" class="col-md-10">
-    <div class="p-3 py-5">
-      <div class="d-flex justify-content-center align-items-center mb-3">
-        <h4 class="text-right">Заголовок</h4>
-      </div>
-
-      
-
-      <div class="row mt-3">
-        <div class="col-md-9">
-          <h1>Текст</h1>
+<div class="card" id="product_creator">
+    <div class="card-body">
+        <!-- Grid row -->
+        <div class="row">
+            <!-- Grid column -->
+            <div class="uk-width-1 uk-text-center">
+                <h1 class="">Мои товары</h1>
+                <a class="uk-button uk-button-primary uk-border-rounded Btnn" role="button" style="margin: auto">Создать товар</a>
+            </div>
+            <!-- Grid column -->
         </div>
-      </div>
+        <!-- Grid row -->
+        <!--Table-->
+        <table class="uk-table uk-table-divider">
+            <!--Table head-->
+            <thead>
+                <tr>
+                    <th class="uk-text-left">Название товара</th>
+                    <th class="uk-text-left">Бренд</th>
+                    <th class="uk-text-left">Цена</th>
+                    <th class="uk-text-left">Опубликовано</th>
+                    <th class="uk-text-left">Удалить</th>
 
-      
 
-      <div class="mt-5 text-center">
-        <button class="btn btn-primary profile-button" type="submit">Опубликовать</button>
-      </div>
+                </tr>
+            </thead>
+            <!--Table head-->
+            <!--Table body-->
+            <form method="GET" id="goodsList" action="/becomeCreator/">
+
+
+                {% csrf_token %}
+                <tbody uk-sortable>
+
+                    {% for product in products %}
+
+                        <tr>
+                            <td class="uk-text-truncate">{{ product.product_name }}</td>
+                            <td>text</td>
+                            <td>{{ product.cost }}</td>
+                            <td>text</td>
+                            <td class="uk-text-left">
+                                <button name="delete" form="goodsList" value="{{product.id}}" href="" type="submit"
+                                    class="uk-button uk-button-danger uk-border-rounded uk-text-large"> X </button>
+                            </td>
+                        </tr>
+
+                    {% endfor %}
+                </tbody>
+            </form>
+        </table>
+
+
+
+
+        <!--Table body-->
+
+        </table>
     </div>
-  </div>
 </div>
 
-</form>
+<style>
+    .hm-gradient {
+        background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+    }
+
+    .darken-grey-text {
+        color: #2E2E2E;
+    }
+
+    .input-group.md-form.form-sm.form-2 input {
+        border: 1px solid #bdbdbd;
+        border-top-left-radius: 0.25rem;
+        border-bottom-left-radius: 0.25rem;
+    }
+
+    .input-group.md-form.form-sm.form-2 input.purple-border {
+        border: 1px solid #9e9e9e;
+    }
+
+    .input-group.md-form.form-sm.form-2 input[type=text]:focus:not([readonly]).purple-border {
+        border: 1px solid #ba68c8;
+        box-shadow: none;
+    }
+
+    .form-2 .input-group-addon {
+        border: 1px solid #ba68c8;
+    }
+
+    .danger-text {
+        color: #ff3547;
+    }
+
+    .success-text {
+        color: #00C851;
+    }
+
+    .table-bordered.red-border,
+    .table-bordered.red-border th,
+    .table-bordered.red-border td {
+        border: 1px solid #ff3547 !important;
+    }
+
+    .table.table-bordered th {
+        text-align: center;
+    }
+</style>
+
+<script>
+    $('.Btnn').on('click', {}, function (inBody) {
+        var xhr = new XMLHttpRequest()
+        localStorage.page=6
+        xhr.open('GET', `becomeCreatorTemplates/6/`)
+        xhr.onload = function () {
+            $('#MainWindowContainer').html(xhr.response)
+        }
+        xhr.send()
+    });
+</script>
