--- a/bizopt/BO/templates/admin.html
+++ b/bizopt/BO/templates/admin.html
@@ -1,7 +1,6 @@
+
+{% extends "base.html" %}
 {% block content %}
-
-
-<body>
 
     <div class="card" id="product_creator">
         <div class="card-body">
@@ -63,8 +62,6 @@
             </table>
         </div>
     </div>
-</body>
+
 {% endblock %}
 
-<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
